# check-dis-bias

./: README.md  charts.ipynb  cv_creation.ipynb  experiment.ipynb  job_description.md  notebook.ipynb  production.ipynb  pyproject.toml  requirements.txt  vortrag.ipynb  vortrag.slides.html
CV_creation_LaTeX/: main.aux  main.out  main.tex
CV_creation_LaTeX/ECV/: README.md  main.tex
CVs/: main.aux  main.tex
CVs/ECV/: main.aux  main.out
results/: results.csv  results_gpt-4-0613.csv  results_max_tokens_80.csv
