[project]
name = "masterseminar_accessability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "numpy>=2.2.5",
    "openai>=1.76.2",
    "pandas>=2.2.3",
]
